find_package(koinos_log CONFIG REQUIRED)
find_package(koinos_util CONFIG REQUIRED)
find_package(koinos_types CONFIG REQUIRED)
find_package(koinos_exception CONFIG REQUIRED)

add_subdirectory(chain)
add_subdirectory(crypto)
add_subdirectory(manifest)
add_subdirectory(mq)
add_subdirectory(net)
add_subdirectory(plugins)
add_subdirectory(statedb)
add_subdirectory(vendor)
